# elaborato-esame

./: Account.cpp  Account.h  CMakeLists.txt  Date.cpp  Date.h  Transaction.cpp  Transaction.h  main.cpp
Test/: CMakeLists.txt  TestAccount.cpp  TestDate.cpp  TestTransaction.cpp  runAllTests.cpp
